[package]
name = "wiki-trust"
version = "0.1.0"
edition = "2021"
authors = [ "Actual Genius Intellectual"]

[dependencies]
chrono = "0.4.34"
csv = "1.3.0"
dotenv = "0.15.0"
env_logger = "0.11.2"
log = "0.4.20"
rayon = "1.8.1"
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
rusqlite = "0.31.0"